<resources>
    <string name="app_name">DroidCafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="froyo_is_premium_self_serve_frozen_yorgut">Froyo is premium self serve frozen yorgut</string>
    <string name="icecream_are_glazed_and_sprinkled_with_candy">Icecream are glazed and sprinkled with candy</string>
    <string name="donuts_are_glazed_and_sprinkled_with_candy">Donuts are glazed and sprinkled with candy</string>

    <string name="donut_order">You have ordered a donut</string>
    <string name="icecream_order">You have ordered an cone ice cream</string>
    <string name="froyo_order">You have ordered Froyo</string>
    <string name="phone">Phone</string>
    <string name="choose_delivery_method">Choose Delivery Method</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="note">Note</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="same_day_messenger_service">Same day messenger service</string>

</resources>
